feat: Enhance functionality with comment updates, subscription management, and video deletion; add new routes and controllers

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,9 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+# image
+videoframe_888473.png
+
 # dotenv environment variables file
 .env
 .env.test
